--- a/AngularCustomerApps/partials/customers.html
+++ b/AngularCustomerApps/partials/customers.html
@@ -1,4 +1,16 @@
 ﻿<div>
+    <!--BootCards-->
+    <!--    <script src="../JS/bootcards/js/bootcards.js" type="text/javascript"></script>
+    
+    <link href="JS/bootcards/css/bootcards-desktop.css" rel="stylesheet" />
+
+    <link href="../JS/bootcards/fonts/icomoon.eot" rel="" />
+    <link href="../JS/bootcards/fonts/icomoon.svg" rel="" />
+    <link href="../JS/bootcards/fonts/icomoon.ttf" rel="" />
+    <link href="../JS/bootcards/fonts/icomoon.woff" rel="" />-->
+
+    <!--BootCards ends-->
+
     <header>
         <h3>Customers</h3>
     </header>
@@ -16,22 +28,42 @@
         <button value="AddCustomer" class="btn btn-default" data-ng-click="addCustomer()">AddCustomer</button>
 
     </div>
-    <div>
-        
-            <ul>
-                <li data-ng-repeat="customer in customers">
-                    {{customer.firstName}}-{{customer.lastName}}-{{customer.city}}
-                </li>
-            </ul>
-             <div class="row cardContainer">
-                <div class="span3 card" data-ng-repeat="customer in customers | orderBy:'lastName'">
-                    <button class="btn close cardClose" data-ng-click="deleteCustomer(customer.id)">&times;</button>
-                    <div class="cardHeader">{{customer.firstName + ' ' + customer.lastName}}</div>
-                    <div class="cardBody">{{customer.city}}</div>
-                    <a href="#/customerorders/{{customer.id}}" class="cardBody btn-link">View {{ customer.orders.length }} Orders</a>
+    <div class="container" id="main">
+        <br />
+
+        <div data-ng-repeat="customer in customers" class="col-sm-5 bootcards-list">
+            <div id="contactCard">
+                <div class="panel panel-default">
+                    <div class="panel-heading clearfix">
+                        <h3 class="panel-title pull-left">{{customer.firstName}}&nbsp;{{customer.lastName}}
+                        </h3>
+                        <div class="btn-group pull-right visible-xs">
+                            <a class="btn btn-primary" href="#" >
+                                <i class="fa fa-pencil"></i>
+                                <span>Delete</span>
+                            </a>
+                        </div>
+                        <button data-ng-click="deleteCustomer()" class="btn btn-primary pull-right hidden-xs"><div class="glyphicon glyphicon-remove"/></button>
+                        
+                        
+                    </div>
+                    <div class="list-group">
+                        <div class="list-group-item">
+                            City:  {{customer.city}}
+                        </div>
+                        <div class="list-group-item">
+                            <a href="#/customerorders/{{customer.id}}">View {{customer.orders.length}} Orders </a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        
+        </div>
+
+
+
+
+
+
     </div>
 </div>
 
