--- a/AngularCustomerApps/partials/customerOrders.html
+++ b/AngularCustomerApps/partials/customerOrders.html
@@ -1,9 +1,19 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+﻿<div id="customerOrderView">
+    <div id="container">
+        <header>
+            <h3>Customers Order</h3>
+            <h4>Orders for {{customer.firstName}} {{customer.lastName}}</h4>
+        </header>
+        <div class="span12">
+            <div class="indent">
+                {{customer.address}}
+                <br />
+                {{customer.city}}
+            </div>
+        </div>
+        <br /><br />
+        <div class="span12">
+            <div data-ng-include="'/partials/OrderTable.html'"></div>
+        </div>
+    </div>
+</div>
