--- a/AngularCustomerApps/partials/orders.html
+++ b/AngularCustomerApps/partials/orders.html
@@ -1,9 +1,17 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
+﻿<div id="Orders">
+    <div id="container">
+        <header>
+            <h3>All Customers Order</h3>
+        </header>
 
-</body>
-</html>
+        <div class="row">
+            <div class="span12" data-ng-repeat="customer in customers">
+                <div class="indent">
+                    <h4><a href="#/customerOrders/{{customer.id}}">{{customer.firstName}}&nbsp;{{customer.lastName}}</a></h4>
+                </div>
+                <div data-ng-include="'/partials/OrderTable.html'">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
